--- a/app/build.gradle
+++ b/app/build.gradle
@@ -116,7 +116,7 @@ dependencies {
     implementation files('libs/SecurityEnvSDK-release-1.1.0.jar')
     implementation files('libs/umeng-sharetool-6.9.2.jar')
     //状态栏颜色控制
-    compile 'com.jaeger.statusbarutil:library:1.5.1'
+    implementation 'com.jaeger.statusbarutil:library:1.5.1'
 }
 
 protobuf {
