--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -91,10 +91,6 @@
             android:name=".ui.activity.RegisterActivity"
             android:launchMode="singleTop"
             android:screenOrientation="portrait"/>
-        <activity
-            android:name=".ui.activity.LiveDisplayActivity"
-            android:launchMode="singleTop"
-            android:screenOrientation="portrait"/>
 
         <!-- 金山云直播 -->
         <activity
@@ -171,6 +167,9 @@
         <activity android:name=".ui.activity.UserInfoActivity"/>
 
         <activity android:name=".ui.activity.camera.Camera2Activity"></activity>
+        <activity
+            android:name=".ui.activity.LiveDisplayActivityNew"
+            android:windowSoftInputMode="adjustNothing"></activity>
 
         <!--Provider组件-->
         <provider
