--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'com.google.protobuf'
 
 android {
     compileSdkVersion 27
+    buildToolsVersion "27.1.1"
     defaultConfig {
         applicationId "com.whzl.mengbi"
         minSdkVersion 15
@@ -14,7 +15,7 @@ android {
 
         // 此处很重要，指定APP只使用 armeabi-v7a和arm64-v8a的库
         ndk {
-            abiFilters 'armeabi-v7a', 'arm64-v8a','x86'
+            abiFilters 'armeabi-v7a', 'arm64-v8a'
         }
     }
     buildTypes {
@@ -24,15 +25,15 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
 
-        debug{
+        debug {
             minifyEnabled false
             signingConfig signingConfigs.debug
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 
-    signingConfigs{
-        debug{
+    signingConfigs {
+        debug {
             storeFile file('MengBi.jks')
             storePassword "mengbi"
             keyAlias "mengbi"
@@ -77,7 +78,8 @@ dependencies {
     implementation 'com.youth.banner:banner:1.4.10'
     implementation 'com.github.bumptech.glide:glide:4.7.1'
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
-    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation 'com.android.support.test:runner:1.0.2'
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.android.support:cardview-v7:27.1.1'
@@ -94,8 +96,10 @@ dependencies {
     implementation 'com.google.protobuf:protoc:3.5.1'
     implementation 'org.greenrobot:eventbus:3.0.0'
     //上拉刷新，下拉加载
-    implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.5.1'
-    implementation 'com.scwang.smartrefresh:SmartRefreshHeader:1.0.5.1'
+    implementation 'com.zhy:base-rvadapter:3.0.3'
+    implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-alpha-11'
+    implementation 'com.scwang.smartrefresh:SmartRefreshHeader:1.1.0-alpha-11'
+    //没有使用特殊Header，可以不加这行
     implementation 'com.android.support:multidex:1.0.3'
     //知乎开源相册选择
     implementation 'com.zhihu.android:matisse:0.4.3'
@@ -107,16 +111,19 @@ dependencies {
     implementation 'com.contrarywind:Android-PickerView:3.2.5'
     //地区滚动选择
     implementation 'liji.library.dev:citypickerview:3.1.8'
-    //金山云
-    implementation files('libs/ksylive.jar')
-    implementation files('libs/zxing.jar')
     //友盟基础组件
     implementation 'com.umeng.sdk:common:1.5.3'
     implementation 'com.umeng.sdk:utdid:1.1.5.3'
+    //金山云
+    implementation files('libs/ksylive.jar')
+    implementation files('libs/zxing.jar')
+    //友盟 libs
+    implementation files('libs/umeng-share-core-6.9.2.jar')
+    implementation files('libs/umeng-share-QQ-simplify-6.9.2.jar')
+    implementation files('libs/umeng-share-wechat-simplify-6.9.2.jar')
     implementation files('libs/SecurityEnvSDK-release-1.1.0.jar')
     implementation files('libs/umeng-sharetool-6.9.2.jar')
-    //状态栏颜色控制
-    implementation 'com.jaeger.statusbarutil:library:1.5.1'
+    implementation files('libs/alipaySdk-20180601.jar')
 }
 
 protobuf {
