--- a/app/build.gradle
+++ b/app/build.gradle
@@ -124,6 +124,8 @@ dependencies {
     implementation files('libs/SecurityEnvSDK-release-1.1.0.jar')
     implementation files('libs/umeng-sharetool-6.9.2.jar')
     implementation files('libs/alipaySdk-20180601.jar')
+
+    implementation 'com.jaeger.statusbarutil:library:1.5.1'
 }
 
 protobuf {
