--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'com.google.protobuf'
 
 android {
     compileSdkVersion 27
+    buildToolsVersion "27.1.1"
     defaultConfig {
         applicationId "com.whzl.mengbi"
         minSdkVersion 15
@@ -93,11 +94,11 @@ dependencies {
     implementation 'com.google.protobuf:protobuf-java:3.5.1'
     implementation 'com.google.protobuf:protoc:3.5.1'
     implementation 'org.greenrobot:eventbus:3.0.0'
-
-    implementation 'com.zhy:base-rvadapter:3.0.3'
     //上拉刷新，下拉加载
-    implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.5.1'
-    implementation 'com.scwang.smartrefresh:SmartRefreshHeader:1.0.5.1'
+    implementation 'com.zhy:base-rvadapter:3.0.3'
+    implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-alpha-11'
+    implementation 'com.scwang.smartrefresh:SmartRefreshHeader:1.1.0-alpha-11'
+    //没有使用特殊Header，可以不加这行
     implementation 'com.android.support:multidex:1.0.3'
     //知乎开源相册选择
     implementation 'com.zhihu.android:matisse:0.4.3'
@@ -109,14 +110,19 @@ dependencies {
     implementation 'com.contrarywind:Android-PickerView:3.2.5'
     //地区滚动选择
     implementation 'liji.library.dev:citypickerview:3.1.8'
-    //金山云
-    implementation files('libs/ksylive.jar')
-    implementation files('libs/zxing.jar')
     //友盟基础组件
     implementation 'com.umeng.sdk:common:1.5.3'
     implementation 'com.umeng.sdk:utdid:1.1.5.3'
+    //金山云
+    implementation files('libs/ksylive.jar')
+    implementation files('libs/zxing.jar')
+    //友盟 libs
+    implementation files('libs/umeng-share-core-6.9.2.jar')
+    implementation files('libs/umeng-share-QQ-simplify-6.9.2.jar')
+    implementation files('libs/umeng-share-wechat-simplify-6.9.2.jar')
     implementation files('libs/SecurityEnvSDK-release-1.1.0.jar')
     implementation files('libs/umeng-sharetool-6.9.2.jar')
+    implementation files('libs/alipaySdk-20180601.jar')
 
     implementation files('libs/alipaySdk-20180601.jar')
 
