注册页完成

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -227,5 +227,6 @@
             </intent-filter>
         </activity>
         <activity android:name=".ui.activity.FollowActivity" />
+        <activity android:name=".ui.activity.RegisterActivityNew" />
     </application>
 </manifest>
