--- a/app/build.gradle
+++ b/app/build.gradle
@@ -97,7 +97,6 @@ dependencies {
     implementation 'com.google.protobuf:protoc:3.5.1'
     implementation 'org.greenrobot:eventbus:3.0.0'
     //上拉刷新，下拉加载
-    implementation 'com.zhy:base-rvadapter:3.0.3'
     implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-alpha-11'
     implementation 'com.scwang.smartrefresh:SmartRefreshHeader:1.1.0-alpha-11'
     //没有使用特殊Header，可以不加这行
@@ -109,9 +108,9 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxjava:2.1.9'
     implementation 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.3@aar'
     //时间滚动选择
-    implementation 'com.contrarywind:Android-PickerView:3.2.5'
+    //implementation 'com.contrarywind:Android-PickerView:3.2.5'
     //地区滚动选择
-    implementation 'liji.library.dev:citypickerview:3.1.8'
+    //implementation 'liji.library.dev:citypickerview:3.1.8'
     //友盟基础组件
     implementation 'com.umeng.sdk:common:1.5.3'
     implementation 'com.umeng.sdk:utdid:1.1.5.3'
@@ -129,7 +128,7 @@ dependencies {
     implementation files('libs/alipaySdk-20180601.jar')
 
     implementation 'com.jaeger.statusbarutil:library:1.5.1'
-    //gif动态图
+    //gif动态图,聊天中动态表情显示
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.14'
 
     //状态栏颜色控制
