--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,10 @@ android {
         release {
             buildConfigField("boolean", "API_DEBUG_ENT", "false")
             manifestPlaceholders = [appName: "萌比直播"]
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
+            zipAlignEnabled true
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.debug
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
@@ -32,6 +35,9 @@ android {
             buildConfigField("boolean", "API_DEBUG_ENT", "true")
             manifestPlaceholders = [appName: "萌比直播dev"]
             minifyEnabled false
+            shrinkResources false
+            zipAlignEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.debug
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
@@ -105,7 +111,7 @@ dependencies {
     //没有使用特殊Header，可以不加这行
     implementation 'com.android.support:multidex:1.0.3'
     //知乎开源相册选择
-    implementation 'com.zhihu.android:matisse:0.4.3'
+//    implementation 'com.zhihu.android:matisse:0.4.3'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
     implementation 'io.reactivex.rxjava2:rxjava:2.1.9'
