--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,10 @@
         <!--<meta-data-->
         <!--android:name="UMENG_APPKEY"-->
         <!--android:value="5b3c9412a40fa34d390000ac" />-->
+
+        <!--<meta-data-->
+        <!--android:name="UMENG_CHANNEL"-->
+        <!--android:value="mengbi" />-->
         <!--QQAPPKEY-->
         <!--<meta-data-->
         <!--android:name="52f84675951166e7dcc95b019ccd63fa"-->
@@ -216,8 +220,8 @@
         </activity>
         <activity
             android:name=".ui.activity.MainActivity"
-            android:launchMode="singleTask"
-            android:exported="true"/>
+            android:exported="true"
+            android:launchMode="singleTask" />
         <activity android:name=".ui.activity.LoginActivityNew" />
         <activity
             android:name=".wxapi.WXPayEntryActivity"
