--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,7 +32,7 @@ android {
         }
 
         debug {
-            buildConfigField("boolean", "API_DEBUG_ENT", "true")
+            buildConfigField("boolean", "API_DEBUG_ENT", "false")
             manifestPlaceholders = [appName: "萌比直播dev"]
             minifyEnabled false
             shrinkResources false
@@ -149,6 +149,17 @@ dependencies {
     implementation 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:+'
 
     implementation 'com.meituan.android.walle:library:1.1.6'
+    //百度统计
+    implementation 'com.baidu.mobstat:mtj-sdk-circle:3.9.1.0'
+    //retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.4.1'
+    implementation 'com.facebook.stetho:stetho:1.3.1'
+    implementation 'com.facebook.stetho:stetho-okhttp3:1.3.1'
+    implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
+
 }
 
 protobuf {
