礼物动画抽取,添加轨道数动态配置

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -275,5 +275,6 @@
         <activity android:name=".ui.activity.RegisterActivityNew" />
         <activity android:name=".ui.activity.SettingActivity" />
         <activity android:name=".ui.activity.AboutUsActivity" />
+        <activity android:name=".ui.activity.WatchHistoryActivity" />
     </application>
 </manifest>
