--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -260,7 +260,7 @@
             android:name=".ui.activity.MainActivity"
             android:exported="true"
             android:launchMode="singleTask" />
-        <activity android:name=".ui.activity.LoginActivityNew" />
+        <activity android:name=".ui.activity.LoginActivity" />
         <activity
             android:name=".wxapi.WXPayEntryActivity"
             android:launchMode="singleTop"
