--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -206,7 +206,8 @@
         <activity android:name=".ui.activity.camera.Camera2Activity"></activity>
         <activity
             android:name=".ui.activity.LiveDisplayActivity"
-            android:windowSoftInputMode="adjustNothing">
+            android:windowSoftInputMode="adjustNothing"
+            android:launchMode="singleTask">
 
         </activity>
 
@@ -260,7 +261,8 @@
             android:name=".ui.activity.MainActivity"
             android:exported="true"
             android:launchMode="singleTask" />
-        <activity android:name=".ui.activity.LoginActivity" />
+        <activity android:name=".ui.activity.LoginActivity"
+            android:launchMode="singleTop"/>
         <activity
             android:name=".wxapi.WXPayEntryActivity"
             android:launchMode="singleTop"
@@ -277,5 +279,7 @@
         <activity android:name=".ui.activity.AboutUsActivity" />
         <activity android:name=".ui.activity.WatchHistoryActivity" />
         <activity android:name=".ui.activity.FeedbackActivity" />
+        <activity android:name=".ui.activity.RankListActivity"
+            android:launchMode="singleTop"/>
     </application>
 </manifest>
