--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -272,5 +272,6 @@
             android:launchMode="singleTop"/>
         <activity android:name=".ui.activity.CommWebActivity"
             android:launchMode="singleTop"/>
+        <activity android:name=".ui.activity.me.ShopActivity" />
     </application>
 </manifest>
