--- a/app/build.gradle
+++ b/app/build.gradle
@@ -164,6 +164,7 @@ dependencies {
     debugImplementation 'com.squareup.leakcanary:leakcanary-support-fragment:1.6.1'
 
     implementation files('libs/tecent_x5_webview.jar')
+    implementation 'com.github.lzyzsd:jsbridge:1.0.4'
 }
 
 protobuf {
