--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -280,5 +280,8 @@
         <activity android:name=".ui.activity.SearchActivity"/>
         <activity android:name=".ui.activity.me.PackActivity"/>
         <activity android:name=".ui.activity.base.FrgActivity"/>
+        <activity android:name=".ui.activity.ForgetPasswordActivity"/>
+        <activity android:name=".ui.activity.ResetPasswordActivity"/>
+        <activity android:name=".ui.activity.RetrievePasswordActivity"/>
     </application>
 </manifest>
