--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,16 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.google.protobuf'
 apply from: 'multiple-channel.gradle'
+apply plugin: 'walle'
+
+walle {
+    // 指定渠道包的输出路径
+    apkOutputFolder = new File("${project.buildDir}/outputs/channels")
+    // 定制渠道包的APK的文件名称
+    apkFileNameFormat = '${channel}-v${versionName}-${versionCode}.apk'
+    // 渠道配置文件
+    channelFile = new File("${project.getProjectDir()}/channel")
+}
 
 android {
     compileSdkVersion 27
