--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -287,5 +287,7 @@
         <activity android:name=".ui.activity.ForgetPasswordActivity"/>
         <activity android:name=".ui.activity.ResetPasswordActivity"/>
         <activity android:name=".ui.activity.RetrievePasswordActivity"/>
+
+        <activity android:name=".ui.activity.LiveDisplayNewActivity"/>
     </application>
 </manifest>
