--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -251,9 +251,8 @@
             android:name=".ui.activity.MainActivity"
             android:exported="true"
             android:launchMode="singleTask" />
-        <activity
-            android:name=".ui.activity.LoginActivity"
-            android:launchMode="singleTop" />
+        <activity android:name=".ui.activity.LoginActivity"
+            android:launchMode="singleTop"/>
         <activity
             android:name=".wxapi.WXPayEntryActivity"
             android:launchMode="singleTop"
@@ -269,12 +268,10 @@
         <activity android:name=".ui.activity.AboutUsActivity" />
         <activity android:name=".ui.activity.WatchHistoryActivity" />
         <activity android:name=".ui.activity.FeedbackActivity" />
-        <activity
-            android:name=".ui.activity.RankListActivity"
-            android:launchMode="singleTop" />
-        <activity
-            android:name=".ui.activity.CommWebActivity"
-            android:launchMode="singleTop" />
+        <activity android:name=".ui.activity.RankListActivity"
+            android:launchMode="singleTop"/>
+        <activity android:name=".ui.activity.CommWebActivity"
+            android:launchMode="singleTop"/>
         <activity android:name=".ui.activity.me.ShopActivity" />
         <activity android:name=".ui.activity.me.BuyVipActivity" />
         <activity android:name=".ui.activity.me.SendVipActivity" />
@@ -287,7 +284,5 @@
         <activity android:name=".ui.activity.ForgetPasswordActivity"/>
         <activity android:name=".ui.activity.ResetPasswordActivity"/>
         <activity android:name=".ui.activity.RetrievePasswordActivity"/>
-
-        <activity android:name=".ui.activity.LiveDisplayNewActivity"/>
     </application>
 </manifest>
