--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -250,18 +250,19 @@
         <activity
             android:name=".ui.activity.MainActivity"
             android:exported="true"
-            android:launchMode="singleTask" >
+            android:launchMode="singleTask">
             <!--<intent-filter>-->
-                <!--<action android:name="android.intent.action.VIEW" />-->
-                <!--<category android:name="android.intent.category.DEFAULT" />-->
-                <!--&lt;!&ndash; 处理以"app_name://page/type"开头的 URI &ndash;&gt;-->
-                <!--<data android:scheme="mengbi" />-->
-                <!--<data android:host="play" />-->
-                <!--<data android:path="/home" />-->
+            <!--<action android:name="android.intent.action.VIEW" />-->
+            <!--<category android:name="android.intent.category.DEFAULT" />-->
+            <!--&lt;!&ndash; 处理以"app_name://page/type"开头的 URI &ndash;&gt;-->
+            <!--<data android:scheme="mengbi" />-->
+            <!--<data android:host="play" />-->
+            <!--<data android:path="/home" />-->
             <!--</intent-filter>-->
         </activity>
-        <activity android:name=".ui.activity.LoginActivity"
-            android:launchMode="singleTop"/>
+        <activity
+            android:name=".ui.activity.LoginActivity"
+            android:launchMode="singleTop" />
         <activity
             android:name=".wxapi.WXPayEntryActivity"
             android:launchMode="singleTop"
@@ -277,10 +278,12 @@
         <activity android:name=".ui.activity.AboutUsActivity" />
         <activity android:name=".ui.activity.WatchHistoryActivity" />
         <activity android:name=".ui.activity.FeedbackActivity" />
-        <activity android:name=".ui.activity.RankListActivity"
-            android:launchMode="singleTop"/>
-        <activity android:name=".ui.activity.CommWebActivity"
-            android:launchMode="singleTop"/>
+        <activity
+            android:name=".ui.activity.RankListActivity"
+            android:launchMode="singleTop" />
+        <activity
+            android:name=".ui.activity.CommWebActivity"
+            android:launchMode="singleTop" />
         <activity android:name=".ui.activity.me.ShopActivity" />
         <activity android:name=".ui.activity.me.BuyVipActivity" />
         <activity android:name=".ui.activity.me.SendVipActivity" />
@@ -290,8 +293,11 @@
         <activity android:name=".ui.activity.me.PackActivity" />
         <activity android:name=".ui.activity.base.FrgActivity" />
         <activity android:name=".ui.activity.me.BillActivity" />
-        <activity android:name=".ui.activity.ForgetPasswordActivity"/>
-        <activity android:name=".ui.activity.ResetPasswordActivity"/>
-        <activity android:name=".ui.activity.RetrievePasswordActivity"/>
+        <activity android:name=".ui.activity.ForgetPasswordActivity" />
+        <activity android:name=".ui.activity.ResetPasswordActivity" />
+        <activity android:name=".ui.activity.RetrievePasswordActivity" />
+        <activity
+            android:name=".ui.activity.AnchorCardActivity"
+            android:theme="@style/TransparentTheme" />
     </application>
 </manifest>
