--- a/app/build.gradle
+++ b/app/build.gradle
@@ -140,6 +140,7 @@ dependencies {
     implementation files('libs/SecurityEnvSDK-release-1.1.0.jar')
     implementation files('libs/umeng-sharetool-6.9.2.jar')
     implementation 'com.umeng.sdk:analytics:7.5.3'
+    implementation 'com.umeng.sdk:share-sina:6.9.2'
     implementation files('libs/alipaySdk-20180601.jar')
     implementation files('libs/alipaySdk-20180601.jar')
     implementation 'com.jaeger.statusbarutil:library:1.5.1'
