--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -321,5 +321,7 @@
         <activity
             android:name=".ui.activity.AnchorCardActivity"
             android:theme="@style/TransparentTheme" />
+
+        <activity android:name=".ui.activity.PersonalInfoActivity"/>
     </application>
 </manifest>
