--- a/app/build.gradle
+++ b/app/build.gradle
@@ -174,6 +174,7 @@ dependencies {
     implementation 'com.uber.autodispose:autodispose-android-archcomponents:0.7.0'
     //SVGA动画
     implementation 'com.github.yyued:SVGAPlayer-Android:2.1.9'
+    implementation 'com.github.hackware1993:MagicIndicator:1.5.0'
 }
 
 protobuf {
