--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,8 @@ apply plugin: 'com.android.application'
 apply plugin: 'com.google.protobuf'
 apply from: 'multiple-channel.gradle'
 apply plugin: 'walle'
+apply plugin: 'org.greenrobot.greendao'
+
 
 walle {
     // 指定渠道包的输出路径
@@ -79,6 +81,12 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    greendao {
+        schemaVersion 1  //数据库版本号
+        daoPackage 'com.whzl.mengbi.gen'
+        targetGenDir 'src/main/java'
     }
 }
 
@@ -174,6 +182,8 @@ dependencies {
     implementation 'com.uber.autodispose:autodispose-android-archcomponents:0.7.0'
     //SVGA动画
     implementation 'com.github.yyued:SVGAPlayer-Android:2.1.9'
+    implementation 'org.greenrobot:greendao:3.2.2'
+    implementation 'com.github.yuweiguocn:GreenDaoUpgradeHelper:v2.1.0'
 }
 
 protobuf {
