--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -328,5 +328,7 @@
         <activity android:name=".ui.activity.me.PlayNotifyActivity" />
         <activity android:name=".ui.activity.me.BindingPhoneActivity"/>
         <activity android:name=".ui.activity.me.ChangePhoneActivity"/>
+        <activity android:name=".ui.activity.me.ChipCompositeActivity"/>
+        <activity android:name=".ui.activity.me.MyChipActivity"/>
     </application>
 </manifest>
