switch account ui

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -326,9 +326,10 @@
         <activity android:name=".ui.activity.PersonalInfoActivity" />
         <activity android:name=".ui.activity.PkRecordActivity" />
         <activity android:name=".ui.activity.me.PlayNotifyActivity" />
-        <activity android:name=".ui.activity.me.BindingPhoneActivity"/>
-        <activity android:name=".ui.activity.me.ChangePhoneActivity"/>
-        <activity android:name=".ui.activity.me.ChipCompositeActivity"/>
-        <activity android:name=".ui.activity.me.MyChipActivity"/>
+        <activity android:name=".ui.activity.me.BindingPhoneActivity" />
+        <activity android:name=".ui.activity.me.ChangePhoneActivity" />
+        <activity android:name=".ui.activity.me.ChipCompositeActivity" />
+        <activity android:name=".ui.activity.me.MyChipActivity" />
+        <activity android:name=".ui.activity.me.AccountSwitchActivity" />
     </application>
 </manifest>
